modify paging type
